spacing issue fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -183,6 +183,7 @@ body {
   margin-top: 20px;
   color     : #fff;
   margin-left: 25px;
+  text-align: left;
   font-size : 3vw;
   overflow  : hidden;
   position  : relative;
